// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageRenderer adds images to preview 1`] = `
"<div><div class=\\"markdown\\"><p><a href=\\"https://s3.amazonaws.com/keybase_processed_uploads/d24c7479498157f2cb81e185977dfd05_360_360.jpeg\\">https://s3.amazonaws.com/keybase_processed_uploads/d24c7479498157f2cb81e185977dfd05_360_360.jpeg</a></p>
</div><div class=\\"previews\\"><img src=\\"https://s3.amazonaws.com/keybase_processed_uploads/d24c7479498157f2cb81e185977dfd05_360_360.jpeg\\"></div></div>"
`;

exports[`MessageRenderer highlights code 1`] = `
"<div><div class=\\"markdown\\"><pre><code class=\\"language-javascript\\"><span class=\\"hljs-keyword\\">const</span> hello = <span class=\\"hljs-string\\">\\"world\\"</span>;
</code></pre>
</div><div class=\\"previews\\"></div></div>"
`;

exports[`MessageRenderer renders bold text 1`] = `
"<div><div class=\\"markdown\\"><p><strong>Bold text</strong></p>
</div><div class=\\"previews\\"></div></div>"
`;

exports[`MessageRenderer renders italic text 1`] = `
"<div><div class=\\"markdown\\"><p><em>Italic text</em></p>
</div><div class=\\"previews\\"></div></div>"
`;

exports[`MessageRenderer renders lists 1`] = `
"<div><div class=\\"markdown\\"><p>This is a list:</p>
<ul>
<li>Item 1</li>
<li>Item 2</li>
</ul>
</div><div class=\\"previews\\"></div></div>"
`;

exports[`MessageRenderer renders strikethrough text 1`] = `
"<div><div class=\\"markdown\\"><p><s>Strikethrough text</s></p>
</div><div class=\\"previews\\"></div></div>"
`;
